--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ soupsieve==2.4.1
 h11~=0.14.0
 cffi~=1.15.1
 Pillow~=9.5.0
-pip~=23.0.1
+pip==23.1
 attrs==23.1.0
 wheel==0.40.0
 google~=3.0.0
@@ -41,12 +41,12 @@ chardet==5.1.0
 rfc3986==2.0.0
 urllib3~=1.26.15
 pypiwin32~=223
-pywin32~=305
+pywin32==306
 numpy~=1.24.2
 setuptools~=67.6.1
 comtypes~=1.1.14
-psutil~=5.9.4
-pycaw~=20220416
+psutil==5.9.5
+pycaw==20230407
 scipy~=1.10.1
 matplotlib~=3.7.1
 six~=1.16.0
@@ -71,12 +71,12 @@ pycparser~=2.21
 pyparsing~=3.0.9
 langdetect~=1.0.9
 cycler~=0.11.0
-packaging~=23.0
+packaging==23.1
 kiwisolver~=1.4.4
 tokenizers~=0.13.3
 virtualenv~=20.21.0
 distlib~=0.3.6
-filelock~=3.11.0
+filelock==3.12.0
 platformdirs~=3.2.0
 httpx~=0.13.3
 googletrans~=4.0.0rc1
@@ -84,4 +84,4 @@ wsproto~=1.2.0
 pydub~=0.25.1
 pyAudioAnalysis~=0.3.14
 tqdm~=4.65.0
-playsound~=1.2.2
+playsound==1.3.0
