--- a/requirements.txt
+++ b/requirements.txt
@@ -76,8 +76,7 @@ virtualenv~=20.21.0
 distlib~=0.3.6
 filelock==3.12.0
 platformdirs~=3.2.0
-httpx~=0.13.3
-googletrans~=4.0.0rc1
+googletrans==3.0.0
 wsproto~=1.2.0
 pydub~=0.25.1
 pyAudioAnalysis~=0.3.14
