--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-hpack==4.0.0
-hyperframe==6.0.1
-h2==3.*
+hpack~=3.0.0
+hyperframe~=5.2.0
+h2~=3.2.0
 Flask~=2.2.3
 MyApplication~=0.1.0
-beautifulsoup4==4.12.2
-soupsieve==2.4.1
-h11~=0.9.0
+beautifulsoup4~=4.11.2
+soupsieve~=2.4
+h11~=0.14.0
 cffi~=1.15.1
 Pillow~=9.5.0
-pip==23.1
-attrs==23.1.0
-wheel==0.40.0
+pip~=23.0.1
+attrs~=22.2.0
+wheel~=0.38.4
 google~=3.0.0
 Jinja2~=3.1.2
 rsa~=4.9
@@ -24,7 +24,7 @@ trio~=0.22.0
 outcome~=1.2.0
 sniffio~=1.3.0
 exceptiongroup~=1.1.1
-coverage==7.2.3
+coverage~=5.5
 sortedcontainers~=2.4.0
 idna~=3.4
 multidict~=6.0.4
@@ -35,23 +35,25 @@ MarkupSafe~=2.1.2
 Werkzeug~=2.2.3
 itsdangerous~=2.1.2
 hstspreload~=2023.1.1
-httpcore==0.9.0
+httpcore~=0.9.1
 certifi~=2022.12.7
-chardet==5.1.0
-rfc3986==2.0.0
+chardet~=3.0.4
+rfc3986~=1.5.0
 urllib3~=1.26.15
+pypiwin32~=223
+pywin32~=305
 numpy~=1.24.2
 setuptools~=67.6.1
 comtypes~=1.1.14
-psutil==5.9.5
-pycaw==20230407
+psutil~=5.9.4
+pycaw~=20220416
 scipy~=1.10.1
 matplotlib~=3.7.1
 six~=1.16.0
 cachetools~=5.3.0
 aiohttp~=3.8.4
 langid~=1.1.6
-openai==0.27.4
+openai~=0.27.2
 WMI~=1.5.1
 yarl~=1.8.2
 gunicorn~=20.1.0
@@ -61,7 +63,7 @@ pexpect~=4.8.0
 ptyprocess~=0.7.0
 PyAudio~=0.2.13
 python-dateutil~=2.8.2
-selenium==4.8.3
+selenium~=4.8.2
 buildozer~=1.5.0
 contourpy~=1.0.7
 fonttools~=4.39.3
@@ -69,16 +71,17 @@ pycparser~=2.21
 pyparsing~=3.0.9
 langdetect~=1.0.9
 cycler~=0.11.0
-packaging==23.1
+packaging~=23.0
 kiwisolver~=1.4.4
 tokenizers~=0.13.3
 virtualenv~=20.21.0
 distlib~=0.3.6
-filelock==3.12.0
+filelock~=3.11.0
 platformdirs~=3.2.0
-googletrans==3.0.0
+httpx~=0.13.3
+googletrans~=4.0.0rc1
 wsproto~=1.2.0
 pydub~=0.25.1
 pyAudioAnalysis~=0.3.14
 tqdm~=4.65.0
-playsound==1.3.0
+playsound~=1.2.2
