--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ sniffio~=1.3.0
 exceptiongroup~=1.1.1
 coverage~=5.5
 sortedcontainers~=2.4.0
-idna~=3.4
+idna~=2.*
 multidict~=6.0.4
 deprecation~=2.1.0
 eyed3~=0.9.7
