--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,6 @@ cachetools~=5.3.0
 aiohttp~=3.8.4
 langid~=1.1.6
 openai~=0.27.2
-WMI~=1.5.1
 yarl~=1.8.2
 gunicorn~=20.1.0
 aiosignal~=1.3.1
@@ -82,5 +81,5 @@ pydub~=0.25.1
 pyAudioAnalysis~=0.3.14
 tqdm~=4.65.0
 playsound~=1.2.2
-pywin32
+pywin32 ~= 306
 
