--- a/requirements.txt
+++ b/requirements.txt
@@ -74,10 +74,12 @@ distlib~=0.3.6
 filelock~=3.11.0
 platformdirs~=3.2.0
 httpx~=0.13.3
-googletrans==3.0.0
+googletrans~=4.0.0rc1
 wsproto~=1.2.0
 pydub~=0.25.1
 pyAudioAnalysis~=0.3.14
 tqdm~=4.65.0
 pyproject-toml~=0.0.10
-playsound~=1.2.2
+playsound~=1.3.0
+
+transformers~=4.28.1
